# openradar_mmwave_utils

./: .gitignore  CMakeLists.txt  README.md  multi_dca.py
docs/: install.md  mmwavelink_setup.md
setup_dca_1000/: CMakeLists.txt  cf_0.json  cf_1.json  cf_2.json  cli_setup.cpp
setup_dca_1000/Common/: globals.h
setup_dca_1000/Common/DCA1000_API/: rf_api.h
setup_dca_1000/RF_API/: rf_api.cpp
setup_radar/: CMakeLists.txt
setup_radar/ti/control/mmwavelink/: mmwavelink.h
setup_radar/ti/control/mmwavelink/include/: rl_trace.h
setup_radar/ti/control/mmwavelink/src/: rl_controller.c  rl_device.c  rl_driver.c  rl_monitoring.c  rl_sensor.c
setup_radar/ti/example/mmwavelink_example_nonos/: crc_compute.c  map_outputs.py  mmw_config.c  mmw_config.h  mmw_example_nonos.c  mmw_example_nonos.h  rl_nonos.cpp  rl_nonos.h
